--- a/index.html
+++ b/index.html
@@ -1,29 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>food-network-2</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="flexible-container">
         <div class="half-width">
             <h1> <span class="orange-color">SKIP</span> THE DIET</h1>
             <h1>JUST EAT HEALTHY</h1>
             <h1>WITH FOOD NETWORK</h1>
-            <p>Yes, its true that after eating  our food you dont need any diet</p>
-            <a class="link-button" target="_blank" src="https://www.facebook.com/profile.php?id=100015179167735">Order Food</a>
+            <p>Yes, its true that after eating our food you dont need any diet</p>
+            <a class="link-button" target="_blank" src="https://www.facebook.com/profile.php?id=100015179167735">Order
+                Food</a>
         </div>
-        <div class="half-width">
-            <img src="images/taher-2-picture-with-bg (1).png" alt="">
+        <div class=" center-img half-width">
+            <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
-    
+    <section class="top-banner flexible-container">
+        <div class="half-width">
+            <img src="images/female/6667872_preview-removebg-preview.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p>Hi my name Abu Taher Risat.I am junior developer.I am also a chef.I have completed my chef course in
+                uk.My father name is mustafa Kamal And my mother name is Kohinoor Akter.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.facebook.com/profile.php?id=100015179167735">Contact Me</a>
+        </div>
+
+    </section id="recipies">
+    <div class="recipe-title">
+        <h2>My recipes</h2>
+        <div class="my-recipe">
+            <p>I made the recipie of chicken fry.I make chicken curry also.The recipie too easy for me</p>
+        </div>
+    </div>>
+
+    <div class="recipies">
+        <div class="recipe">
+            <div class="recipe-img">
+                <img src="images/food/Project Cover.jpg" alt="">
+            </div>
+            <div class="recipe-description">
+                <h3>Jimmy Dean</h3>
+                <p>This is delicious for breakfast. It is healthy. It will give you energy for the whole day.
+                    It is made with beef tikka and egg.</p>
+            </div>
+        </div>
+        <div class="recipe">
+            <div class="recipe-img">
+                <img src="images/food/curry.png" alt="">
+            </div>
+            <div class="recipe-description">
+                <h3>Chicken Curry</h3>
+                <p>This Chicken Curry is very delicious. I have learned it from my mom. She makes it with
+                    perfection. This recipe is so delicious</p>
+            </div>
+        </div>
+        <div class="recipe">
+            <div class="recipe-img">
+                <img src="images/food/Project Cover1.jpg" alt="">
+            </div>
+            <div class="recipe-description">
+                <h3>Beef Bhuna</h3>
+                <p>This Beef Bhuna is one of my favorite recipe. It is very
+                    delicious. You will regret if you dont try this dish in your life atleast for one time.</p>
+            </div>
+        </div>
+    </div>
+
+    </section>
+    <footer>
+        <h2><span class="orange-color">Food</span><span id="footer-title">Network</span></h2>
+            <p>Eat healthy to live happy.Live healthy to live happy</p>
+    </footer>
+
 </body>
+
 </html>
